# freetalk

./: AUTHORS  ChangeLog  ChangeLog.0  INSTALL  Makefile.am  NEWS  README  TODO  configure.ac
doc/: Makefile.am  authors.texi  freetalk.1  freetalk.man  freetalk.texi  version.texi
examples/: freetalk.scm  ping.ft
extensions/: Makefile.am  beep.scm  broadcast.scm  color.scm  connection.scm  dict-buddy.scm  dyn-commands.scm  file-transfer.scm  first-time-run.sh  first-time-run.sh.in  hacker-romance.scm  history.scm  init.scm.in  login.scm  loudscream.scm  mr-oxford.scm  pipe.scm  proud-of-freetalk.scm  roster.scm  shell.scm  state.scm  url.scm  utils.scm
po/: LINGUAS  bg.po
src/: Makefile.am  callbacks.cc  callbacks.h  commands.cc  commands.h  compat.cc  compat.h  extensions.cc  extensions.h  file_transfer.cc  file_transfer.h  freetalk.cc  freetalk.h  interpreter.cc  interpreter.h  loudscream.cc  loudscream.h  presence.cc  presence.h  primitives.cc  primitives.h  register.cc  register.h  roster.cc  roster.h  util.cc  util.h
